=== 0.0.0 ===
2008-03-03	Pascal Volk  <neverseen@users.sourceforge.net>
	* pgsql-virtual_mailbox_domains.cf: Added to repository
	* INSTALL: fixed postfix docu

2008-03-02  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Added view vmm_domain_info
	* VirtualMailManager/Alias.py: Removed attribute Alias._aid
	Removed parameter basedir from Alias.__init__() and Alias._setAddr()
	* VirtualMailManager/MailLocation.py: Fixed typo in MailLocation.__init__()
	* VirtualMailManager/Account.py: Integrated Transport- and
	MailLocation-stuff
	Removed attributes: Account._base and Account._home
	* VirtualMailManager/VirtualMailManager.py: some small fixes
	* VirtualMailManager/Domain.py: Added Transport-stuff
	* vmm.cfg: Added option transport in section misc
	* pgsql-transport.cf: changed query for new table layout
	* pgsql-smtpd_sender_login_maps.cf: added missing single quote in query

2008-02-02  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables: Renamed table maildir to maillocation
	Added transport id to table domains, for default transport
	* VirtualMailManager/Transport.py:
	* VirtualMailManager/MailLocation.py: Added to repository
	* VirtualMailManager/constants/ERROR.py: Added error codes for MailLocation
	and Transport classes
	* VirtualMailManager/Exceptions.py: Added exception classes for MailLocation
	and Transport

2008-01-18  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Removed unneeded sequences 'alias_id' and
	 'relocated_id'.
	 Removed unneeded column 'id' from table 'alias' and 'relocated'.

2008-01-15  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Redesign of table layout, create separate tables for
	maildir-folder and transport. Also assign transport to users not to domains

2008-01-11  Pascal Volk  <neverseen@users.sourceforge.net>

	* vmm (usage): Fixed a syntax error.

2008-01-09  Pascal Volk  <neverseen@users.sourceforge.net>

	* install.sh: Also install docs
